--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-</head>
-<body>
 
-  Order Summary
+    <!-- Order Summary
 
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
@@ -27,11 +25,12 @@
   Change
 
   Proceed to Payment
-  Cancel Order
+  Cancel Order -->
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</head>
+<body>
+
+  
+
 </body>
 </html>
