Added HTML & BASIC STYLE

--- a/index.html
+++ b/index.html
@@ -9,8 +9,36 @@
   <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
+  <main class="card">
+    <div class="card_img_holder">
+      <img src="/images/illustration-hero.svg" alt="Main image">
+      <h1 class="card_tag">
+        Order Summary
+      </h1>
+      <p class="card_details">
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
+  device anywhere you like!
+      </p>
+    </div>
 
+    <div class="price_card">
+      <img class="icon_holder" src="/images/icon-music.svg" alt="">
+      <h2 class="price_tag">Annual Plan</h2>
+      <a href="#" class="price-change">
+        Change
+      </a>
+    </div>
 
+    <div class="payment_card">
+      <button class="payment_tag">
+        Proceed to Payment
+      </button>
+      <a href="#" class="payment-cancel">
+        cancel Order
+      </a>
+    </div>
+
+  </main>
 
 </body>
 </html>
