Desktop Design Completed

--- a/index.html
+++ b/index.html
@@ -10,33 +10,59 @@
 </head>
 <body>
   <main class="card">
-    <div class="card_img_holder">
+
+    <!-- card top part -->
+
+    <div class="card_top-part">
+
       <img src="/images/illustration-hero.svg" alt="Main image">
+
       <h1 class="card_tag">
         Order Summary
       </h1>
+
       <p class="card_details">
         You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
       </p>
+
     </div>
 
-    <div class="price_card">
-      <img class="icon_holder" src="/images/icon-music.svg" alt="">
-      <h2 class="price_tag">Annual Plan</h2>
-      <a href="#" class="price-change">
+    <!-- card top part ends -->
+
+    <!-- card plan package part -->
+
+    <div class="card_middle-part">
+
+      <img class="card_icon-holder" src="/images/icon-music.svg" alt="">
+
+      <div class="card_plan-price">
+        <h2
+        class="card_plan-tag">Annual Plan</h2>
+
+      <p class="card_price-tag">$59.99/year</p>
+    </div>
+
+      <a href="#" class="card_price-change">
         Change
       </a>
+
     </div>
 
-    <div class="payment_card">
-      <button class="payment_tag">
+    <!-- card plan package part ends -->
+
+    <!-- card payment part -->
+
+    <div class="card_bottom-part">
+      <button class="card_payment-tag">
         Proceed to Payment
       </button>
-      <a href="#" class="payment-cancel">
-        cancel Order
+      <button class="card_payment-cancel">Cancel Order</button>
+        
       </a>
     </div>
+
+    <!-- card payment part ends -->
 
   </main>
 
